Revision history for Perl extension Libssh.

0.9 2022-05-03
  - Add sftp_read binding

0.8 2020-06-29
  - Add ssh_channel_request_shell binding

0.7 2019-10-09
  - Add keyboard-interactive authentication method mapping (thanks to brodafly)
  - Add an example to multiple parrallel server executions (thanks to brodafly)

0.6 2019-09-09
  - Fix redefine Subroutines with sftp class loading
  - Add sftp file type constants
  - Add sftp mkdir/rename/rmdir bindings

0.5 2019-09-07
  - Update version for libssh 0.9.0 (no confusing)

0.4 2018-01-04
  - Fix issue with wrong option name for sshdir and knowhosts

0.3 2017-08-31
  - add sftp function: unlink, open/write/close file, list_dir
  - add ssh function: ssh_userauth_gssapi
  - add the capability to send input in a ssh channel
  - Fix issue when we close a channel

0.1 2015-01-02
  - initial version